# benchmark-cnn

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.sh  makefile
docs/: implementation.excalidraw
src/: CMakeLists.txt  main_fft.cu  main_winograd.cu  main_winograd_cpu.cpp  main_winograd_gpu.cu
src/fft/: TestConvFFTLoadStoreGPU.cu  TestConvFFTloadGPU.cu  TestFFTRows.cu  convFFTCPU.c  convFFTShared.cu  convFFTShared.cuh  fftShared.cu  fftShared.cuh  fftSharedRow.cu  fftSharedRow.cuh  fft_shared_row.cu  ifftShared.cu  ifftShared.cuh
src/gemm/: gemm  main.cu  main_cpu.cpp  main_opencv.cu
src/shared/: gemm.cuh  hadamard.cu  hadamard.cuh  im2tensor.c  im2tensor.hpp  loadImage.c  loadImage.hpp  loadImageCPU.cu  loadImageGPU.cu  loadImageGPU.cuh  mm.cuh  mm.hpp  storeImage.c  storeImage.hpp  storeImageCPU.cu  storeImageGPU.cu  storeImageGPU.cuh  tensor2im.hpp  transpose.cu  transpose.cuh  transpose.hpp  utils.cpp  utils.hpp
src/shared/atoms/: image_path_vo.hpp  matrix_vo.hpp  tensor_vo.hpp
src/test/: TestConvFFTLoadStoreGPU.cu  TestConvFFTloadGPU.cu  TestFFT.cu  TestFFTRows.cu  testLoadStore.c
src/winograd/: data_process.cu  data_process.cuh  rearange_tile.cpp  rearange_tile.hpp  winograd.cpp  winograd.cu  winograd.cuh  winograd.hpp  winograd_clean.cu
test/: CMakeLists.txt  graph_timings.py  graph_timings_gemm.py  test_hadamard.cu  test_mm_cpu.cpp  test_rearanging.cpp  test_winograd_cpu.cpp  test_winograd_gpu.cu
